Updated template to work with HelpStudio 3

--- a/MSDN_2010/standard.html
+++ b/MSDN_2010/standard.html
@@ -48,7 +48,10 @@
 	
 			<div id="OH_topic">
 				<h1 class="OH_title"><!--DXMETADATA start type="ItemTitle" -->Item Title<!--DXMETADATA end --></h1>
-				<p><strong>Topic Last Modified:</strong> <em>YYYY-MM-DD</em></p>
+				<p><strong>Topic Last Modified:</strong>
+					<!--DXMETADATA start type="Variable" name="Created" -->
+					<em>YYYY-MM-DD</em>
+					<!--DXMETADATA end --></p>
 			</div>
 	
 			<div id="mainSection">
