Upgraded HTML Scraps file english.txt to XML version (fixes </HelpTOCNode> bug). Template file standard.html will have simple TOC.

--- a/MSDN_2010/standard.html
+++ b/MSDN_2010/standard.html
@@ -26,8 +26,11 @@
 		<div class="OH_leftNav">
 			<div id="toc">
 				<div id="toc_parent">
-					<div id="ctl00_toc1_parentLinks" class="OH_parentTocLinks">
-						Parent TOC Links...
+					<div class="OH_parentTocLinks">
+						
+						<!--DXMETADATA start type="TableOfContents" nodescrap="_STD_TOCNODE" -->
+						Table of Contents
+						<!--DXMETADATA end-->
 					</div>
 				</div>
 				<div id="toc_children">
